# RT-DETR

./: .gitignore  EXPORT.md  README.md  export_onnx.py  leap.yaml  leap_binder.py  leap_config.py  leap_config.yaml  leap_custom_test.py  leap_integration.py  leap_mapping.yaml  leap_utils.py  local_requirements.txt  main.py  onnx_rtdetr_infer.py  pyproject.toml  requirements.txt  to_onnx.py
data/: VisDrone.yaml  coco.yaml  coco128.yaml  visdrone.yaml  visdrone128.yaml
data/visdrone128/labels/: test.cache  train.cache  val.cache
docs/superpowers/plans/: 2026-04-19-rheinmetall-format.md
docs/superpowers/specs/: 2026-04-20-s3-data-loading-design.md
leap_binder/: __init__.py  aws_utils.py  common.py  losses.py  metadata.py  metrics.py  preprocess.py  visualizers.py
rtdetr_native/: __init__.py  box_ops.py  criterion.py  matcher.py
scripts/: create_mock_dataset.py  download_coco128.py  download_s3_dataset.py
utils/: general.py
utils/loggers/: __init__.py
