[tool.poetry]
name = "yolov5"
version = "7.0.0"
description = "Ultralytics YOLOv5 for SOTA object detection, instance segmentation and image classification."
authors = ["Glenn Jocher", "Ayush Chaurasia", "Jing Qiu"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
code-loader = "*"
matplotlib = ">=3.3.0"
numpy = ">=1.22.2"
opencv-python = ">=4.6.0"
pillow = ">=7.1.2"
pyyaml = ">=5.3.1"
requests = ">=2.23.0"
scipy = ">=1.4.1"
torch = "2.1.0"
torchvision = "0.16.0"
tqdm = ">=4.64.0"
psutil = "5.9.8"
py-cpuinfo = "*"
thop = ">=0.1.1"
pandas = ">=1.1.4"
seaborn = ">=0.11.0"
ultralytics = "8.1.47"
onnx = "1.17.0"
onnxruntime = "1.19.2"
setuptools = "^82.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
